--- a/index.css
+++ b/index.css
@@ -42,7 +42,7 @@ body, html {
 
 .footer {
   text-transform: uppercase;
-  position: fixed;
+  position: absolute;
   bottom: 5%;
   width: 100%;
   text-align: center;
@@ -57,6 +57,11 @@ body, html {
 #bg-wrap svg {
   width: 100%;
   height: 100%;
+}
+
+audio {
+  z-index: 2;
+
 }
 
 @media (max-width: 910px) {
